# drawbot-symmetry-hackathon

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
mediamtx/: gstlaunch_cam0.sh  gstlaunch_cam1.sh  mediamtx.yml
src/: main.rs  motor.rs  robot.rs  robot_web_control.rs
static/: control.js  index.html  mint.js  nipplejs.min.js  styles.css
